--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -268,6 +268,10 @@ $emoji-people: (
   /* :mrs_claus:                                                           */ "/assets/91f43b7b78d9077aca6fec698800d3bd.svg": "https://upload.wikimedia.org/wikipedia/commons/b/bf/Emoji_u1f936.svg",
   /* :muscle:                                                              */ "/assets/0e2bb36113661c72bb9b3b4e5c834f97.svg": "https://upload.wikimedia.org/wikipedia/commons/e/e4/Emoji_u1f4aa.svg",
   /* :muscle::skin-tone-1:                                                 */ "/assets/b4ae22fc10b358f19971dde7dffbe15f.svg": "https://upload.wikimedia.org/wikipedia/commons/d/d3/Emoji_u1f4aa_1f3fb.svg",
+  /* :muscle::skin-tone-2:                                                 */ "/assets/0cc12dc667ba5d0662df8bae14cbfcba.svg": "https://upload.wikimedia.org/wikipedia/commons/1/12/Emoji_u1f4aa_1f3fc.svg",
+  /* :muscle::skin-tone-3:                                                 */ "/assets/571748cff677266afa77f89a1a0def0a.svg": "https://upload.wikimedia.org/wikipedia/commons/d/d1/Emoji_u1f4aa_1f3fd.svg",
+  /* :muscle::skin-tone-4:                                                 */ "/assets/67fdc367874997900a48cf3a0387e8e3.svg": "https://upload.wikimedia.org/wikipedia/commons/b/bb/Emoji_u1f4aa_1f3fe.svg",
+  /* :muscle::skin-tone-5:                                                 */ "/assets/f85de1590f96185063ff8497864811b4.svg": "https://upload.wikimedia.org/wikipedia/commons/9/9e/Emoji_u1f4aa_1f3ff.svg",
   /* :nail_care:                                                           */ "/assets/d7433e51761b8c70de728e792c3e5182.svg": "https://upload.wikimedia.org/wikipedia/commons/e/ed/Emoji_u1f485.svg",
   /* :nail_care::skin-tone-1:                                              */ "/assets/f648d0cf5e299cd63e286a2d27d9ed1f.svg": "https://upload.wikimedia.org/wikipedia/commons/5/59/Emoji_u1f485_1f3fb.svg",
   /* :nauseated_face:                                                      */ "/assets/a9257530099447e1e7846cf269d16948.svg": "https://upload.wikimedia.org/wikipedia/commons/e/e2/Emoji_u1f922.svg",
