emojiNotoBlobs - :nail_care:

--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -274,6 +274,10 @@ $emoji-people: (
   /* :muscle::skin-tone-5:                                                 */ "/assets/f85de1590f96185063ff8497864811b4.svg": "https://upload.wikimedia.org/wikipedia/commons/9/9e/Emoji_u1f4aa_1f3ff.svg",
   /* :nail_care:                                                           */ "/assets/d7433e51761b8c70de728e792c3e5182.svg": "https://upload.wikimedia.org/wikipedia/commons/e/ed/Emoji_u1f485.svg",
   /* :nail_care::skin-tone-1:                                              */ "/assets/f648d0cf5e299cd63e286a2d27d9ed1f.svg": "https://upload.wikimedia.org/wikipedia/commons/5/59/Emoji_u1f485_1f3fb.svg",
+  /* :nail_care::skin-tone-2:                                              */ "/assets/bfe32961cbd4b305881c5560c271c9f4.svg": "https://upload.wikimedia.org/wikipedia/commons/4/40/Emoji_u1f485_1f3fc.svg",
+  /* :nail_care::skin-tone-3:                                              */ "/assets/78236afc19a5bfbf4f8f8b508f26bc4d.svg": "https://upload.wikimedia.org/wikipedia/commons/5/56/Emoji_u1f485_1f3fd.svg",
+  /* :nail_care::skin-tone-4:                                              */ "/assets/8c2220d044332653d0398a79e25bcd60.svg": "https://upload.wikimedia.org/wikipedia/commons/4/48/Emoji_u1f485_1f3fe.svg",
+  /* :nail_care::skin-tone-5:                                              */ "/assets/3840f4d36dd741d581dfd1e0785dd1c5.svg": "https://upload.wikimedia.org/wikipedia/commons/1/1e/Emoji_u1f485_1f3ff.svg",
   /* :nauseated_face:                                                      */ "/assets/a9257530099447e1e7846cf269d16948.svg": "https://upload.wikimedia.org/wikipedia/commons/e/e2/Emoji_u1f922.svg",
   /* :necktie:                                                             */ "/assets/d49863f87f4f6b66c5cb52305d09cec7.svg": "https://upload.wikimedia.org/wikipedia/commons/e/e9/Emoji_u1f454.svg",
   /* :nerd:                                                                */ "/assets/e694b29603bee9f93dea4cad64502a38.svg": "https://upload.wikimedia.org/wikipedia/commons/8/84/Emoji_u1f913.svg",
