--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -284,6 +284,10 @@ $emoji-people: (
   /* :neutral_face:                                                        */ "/assets/2c6041bfc91ee1174f11740dc26573fe.svg": "https://upload.wikimedia.org/wikipedia/commons/f/fb/Emoji_u1f610.svg",
   /* :no_good:                                                             */ "/assets/c8716626092cfde94ce42517ef389eac.svg": "https://upload.wikimedia.org/wikipedia/commons/4/48/Emoji_u1f645.svg",
   /* :no_good::skin-tone-1:                                                */ "/assets/27858faebf7cdd9ff5ea61a592821626.svg": "https://upload.wikimedia.org/wikipedia/commons/d/de/Emoji_u1f645_1f3fb.svg",
+  /* :no_good::skin-tone-2:                                                */ "/assets/06d5aa8ec24feb494a6ca3c005aa4347.svg": "https://upload.wikimedia.org/wikipedia/commons/c/c4/Emoji_u1f645_1f3fc.svg",
+  /* :no_good::skin-tone-3:                                                */ "/assets/bd8794492d8ebea97ed7240be317b9ef.svg": "https://upload.wikimedia.org/wikipedia/commons/d/d6/Emoji_u1f645_1f3fd.svg",
+  /* :no_good::skin-tone-4:                                                */ "/assets/c85788e71b44f0315fed72f78e98bda0.svg": "https://upload.wikimedia.org/wikipedia/commons/0/09/Emoji_u1f645_1f3fe.svg",
+  /* :no_good::skin-tone-5:                                                */ "/assets/ae5a09140fe0450a519f11d1fe5e1961.svg": "https://upload.wikimedia.org/wikipedia/commons/b/b8/Emoji_u1f645_1f3ff.svg",
   /* :no_mouth:                                                            */ "/assets/0c447d7b6e88284741bb9a70f213a17b.svg": "https://upload.wikimedia.org/wikipedia/commons/1/14/Emoji_u1f636.svg",
   /* :nose:                                                                */ "/assets/dbdf73851d673c57783bb673cd92c2ac.svg": "https://upload.wikimedia.org/wikipedia/commons/7/78/Emoji_u1f443.svg",
   /* :nose::skin-tone-1:                                                   */ "/assets/95504d9ee568b1fb4e405cf6d547a76b.svg": "https://upload.wikimedia.org/wikipedia/commons/3/33/Emoji_u1f443_1f3fb.svg",
