--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -413,6 +413,10 @@ $emoji-people: (
   /* :walking::skin-tone-1:                                                */ "/assets/258d18d5481be6f8bc56cfecad5c347b.svg": "https://upload.wikimedia.org/wikipedia/commons/3/3f/Emoji_u1f6b6_1f3fb.svg",
   /* :wave:                                                                */ "/assets/593c4a3437fbb5b89fbb148f7b96424d.svg": "https://upload.wikimedia.org/wikipedia/commons/7/70/Emoji_u1f44b.svg",
   /* :wave::skin-tone-1:                                                   */ "/assets/061ffa2a36a208deecfc76f7124c863a.svg": "https://upload.wikimedia.org/wikipedia/commons/8/81/Emoji_u1f44b_1f3fb.svg",
+  /* :wave::skin-tone-2:                                                   */ "/assets/056169e50ec7619a6dfc86407f0a29f6.svg": "https://upload.wikimedia.org/wikipedia/commons/a/a3/Emoji_u1f44b_1f3fc.svg",
+  /* :wave::skin-tone-3:                                                   */ "/assets/b54cb6b1b1dabff69eceb5038d184877.svg": "https://upload.wikimedia.org/wikipedia/commons/1/1d/Emoji_u1f44b_1f3fd.svg",
+  /* :wave::skin-tone-4:                                                   */ "/assets/9103c3a712c22ba68d539f694af1b58e.svg": "https://upload.wikimedia.org/wikipedia/commons/c/c5/Emoji_u1f44b_1f3fe.svg",
+  /* :wave::skin-tone-5:                                                   */ "/assets/07214e70ff256be789f4bb9faf91a8fb.svg": "https://upload.wikimedia.org/wikipedia/commons/6/67/Emoji_u1f44b_1f3ff.svg",
   /* :weary:                                                               */ "/assets/2e1d6b723adec95eaa2a500141cf136d.svg": "https://upload.wikimedia.org/wikipedia/commons/6/6b/Emoji_u1f629.svg",
   /* :wink:                                                                */ "/assets/b277c5ffb43011a356200198cf76b22d.svg": "https://upload.wikimedia.org/wikipedia/commons/3/36/Emoji_u1f609.svg",
   /* :woman:                                                               */ "/assets/4e2293fd5dd39f9dffa4a081d49eee85.svg": "https://upload.wikimedia.org/wikipedia/commons/e/e3/Emoji_u1f469.svg",
