--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -398,6 +398,10 @@ $emoji-people: (
   /* :thumbsdown:                                                          */ "/assets/9e1c3ddc9da7effefe8a370b7c33ed7b.svg": "https://upload.wikimedia.org/wikipedia/commons/6/61/Emoji_u1f44e.svg",
   /* :thumbsup:                                                            */ "/assets/2af915882260fdb89538d1610e1d9baa.svg": "https://upload.wikimedia.org/wikipedia/commons/c/ce/Emoji_u1f44d.svg",
   /* :thumbup::skin-tone-1:                                                */ "/assets/19ba2cedf63495a8953eb65feb61abe2.svg": "https://upload.wikimedia.org/wikipedia/commons/7/74/Emoji_u1f44d_1f3fb.svg",
+  /* :thumbup::skin-tone-2:                                                */ "/assets/5b64012fe41f7c9f53d8954766e87287.svg": "https://upload.wikimedia.org/wikipedia/commons/3/3b/Emoji_u1f44d_1f3fc.svg",
+  /* :thumbup::skin-tone-3:                                                */ "/assets/8cd817e8f214fef95cb48eb471cc50d3.svg": "https://upload.wikimedia.org/wikipedia/commons/7/7f/Emoji_u1f44d_1f3fd.svg",
+  /* :thumbup::skin-tone-4:                                                */ "/assets/885410d9d10be663f9c6c559b3abd1dd.svg": "https://upload.wikimedia.org/wikipedia/commons/e/e9/Emoji_u1f44d_1f3fe.svg",
+  /* :thumbup::skin-tone-5:                                                */ "/assets/647e193f787824f48d5c7e3fa9f99d50.svg": "https://upload.wikimedia.org/wikipedia/commons/8/82/Emoji_u1f44d_1f3ff.svg",
   /* :tired_face:                                                          */ "/assets/cf4c66d6a78fdb1a6a77dc434c7d5eb2.svg": "https://upload.wikimedia.org/wikipedia/commons/f/fe/Emoji_u1f62b.svg",
   /* :tongue:                                                              */ "/assets/03ba06f6abbf1e4e44ee591037c18c6b.svg": "https://upload.wikimedia.org/wikipedia/commons/3/3c/Emoji_u1f445.svg",
   /* :tophat:                                                              */ "/assets/e52382056f97f305e32d8f14aa557526.svg": "https://upload.wikimedia.org/wikipedia/commons/d/df/Emoji_u1f3a9.svg",
