--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -395,6 +395,10 @@ $emoji-people: (
   /* :thermometer_face:                                                    */ "/assets/ef589b423dfa7ae5054992649c873db7.svg": "https://upload.wikimedia.org/wikipedia/commons/2/28/Emoji_u1f912.svg",
   /* :thinking:                                                            */ "/assets/53ef346458017da2062aca5c7955946b.svg": "https://upload.wikimedia.org/wikipedia/commons/f/fc/Emoji_u1f914.svg",
   /* :thumbdown::skin-tone-1:                                              */ "/assets/fb405970b18df2babfbff8c0381c0a70.svg": "https://upload.wikimedia.org/wikipedia/commons/7/75/Emoji_u1f44e_1f3fb.svg",
+  /* :thumbdown::skin-tone-2:                                              */ "/assets/84952cb992ed567d514ec6c4c056c1d9.svg": "https://upload.wikimedia.org/wikipedia/commons/a/ae/Emoji_u1f44e_1f3fc.svg",
+  /* :thumbdown::skin-tone-3:                                              */ "/assets/d2b5656704f3d247731e5d5231bb1901.svg": "https://upload.wikimedia.org/wikipedia/commons/3/3a/Emoji_u1f44e_1f3fd.svg",
+  /* :thumbdown::skin-tone-4:                                              */ "/assets/1a65a7418d417e75309dc14777068b8e.svg": "https://upload.wikimedia.org/wikipedia/commons/0/0f/Emoji_u1f44e_1f3fe.svg",
+  /* :thumbdown::skin-tone-5:                                              */ "/assets/a1e924fd1bbaa4aa54edc162e73018ed.svg": "https://upload.wikimedia.org/wikipedia/commons/d/d6/Emoji_u1f44e_1f3ff.svg",
   /* :thumbsdown:                                                          */ "/assets/9e1c3ddc9da7effefe8a370b7c33ed7b.svg": "https://upload.wikimedia.org/wikipedia/commons/6/61/Emoji_u1f44e.svg",
   /* :thumbsup:                                                            */ "/assets/2af915882260fdb89538d1610e1d9baa.svg": "https://upload.wikimedia.org/wikipedia/commons/c/ce/Emoji_u1f44d.svg",
   /* :thumbup::skin-tone-1:                                                */ "/assets/19ba2cedf63495a8953eb65feb61abe2.svg": "https://upload.wikimedia.org/wikipedia/commons/7/74/Emoji_u1f44d_1f3fb.svg",
