--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -331,6 +331,10 @@ $emoji-people: (
   /* :princess::skin-tone-1:                                               */ "/assets/b7bab19670566c278bb5324560223c20.svg": "https://upload.wikimedia.org/wikipedia/commons/5/5f/Emoji_u1f478_1f3fb.svg",
   /* :punch:                                                               */ "/assets/fadb5208b3cfe613768e0ea7a8d1156c.svg": "https://upload.wikimedia.org/wikipedia/commons/1/1c/Emoji_u1f44a.svg",
   /* :punch::skin-tone-1:                                                  */ "/assets/5b47cfea434c291683dc4401a0e44a96.svg": "https://upload.wikimedia.org/wikipedia/commons/0/00/Emoji_u1f44a_1f3fb.svg",
+  /* :punch::skin-tone-2:                                                  */ "/assets/495ad2f944153c5b35803bdad20d3ce9.svg": "https://upload.wikimedia.org/wikipedia/commons/6/66/Emoji_u1f44a_1f3fc.svg",
+  /* :punch::skin-tone-3:                                                  */ "/assets/fb57c8c7cdcff1cd9aa283352318b1de.svg": "https://upload.wikimedia.org/wikipedia/commons/a/ac/Emoji_u1f44a_1f3fd.svg",
+  /* :punch::skin-tone-4:                                                  */ "/assets/712ea87af1839b606e4bda2424b2b920.svg": "https://upload.wikimedia.org/wikipedia/commons/9/94/Emoji_u1f44a_1f3fe.svg",
+  /* :punch::skin-tone-5:                                                  */ "/assets/48e1b40a14ddf5574a4735547fbb7928.svg": "https://upload.wikimedia.org/wikipedia/commons/b/b9/Emoji_u1f44a_1f3ff.svg",
   /* :purse:                                                               */ "/assets/2384e7ab2ccb8ba9f4434ca35a414bea.svg": "https://upload.wikimedia.org/wikipedia/commons/b/b3/Emoji_u1f45b.svg",
   /* :rage:                                                                */ "/assets/10d135bf11670b6db1db682a512da004.svg": "https://upload.wikimedia.org/wikipedia/commons/7/7f/Emoji_u1f621.svg",
   /* :raised_back_of_hand:                                                 */ "/assets/0c0a3500a658fb9df2fe8359cec22571.svg": "https://upload.wikimedia.org/wikipedia/commons/e/e2/Emoji_u1f91a.svg",
