--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -340,6 +340,10 @@ $emoji-people: (
   /* :raised_back_of_hand:                                                 */ "/assets/0c0a3500a658fb9df2fe8359cec22571.svg": "https://upload.wikimedia.org/wikipedia/commons/e/e2/Emoji_u1f91a.svg",
   /* :raised_hand_with_fingers_splayed::skin-tone-1:                       */ "/assets/d119791b00db523bb2d2334aa01f4a92.svg": "https://upload.wikimedia.org/wikipedia/commons/6/6f/Emoji_u1f590_1f3fb.svg",
   /* :raised_hand_with_part_between_middle_and_ring_fingers::skin-tone-1:  */ "/assets/58cc362724b317f91994079a1887e956.svg": "https://upload.wikimedia.org/wikipedia/commons/2/21/Emoji_u1f596_1f3fb.svg",
+  /* :raised_hand_with_part_between_middle_and_ring_fingers::skin-tone-2:  */ "/assets/c229dd04e596f7aa51e8e7c02ad048c4.svg": "https://upload.wikimedia.org/wikipedia/commons/8/8c/Emoji_u1f596_1f3fc.svg",
+  /* :raised_hand_with_part_between_middle_and_ring_fingers::skin-tone-3:  */ "/assets/e5b26f209a6f89f8cb3e045b45f9a4f7.svg": "https://upload.wikimedia.org/wikipedia/commons/d/dc/Emoji_u1f596_1f3fd.svg",
+  /* :raised_hand_with_part_between_middle_and_ring_fingers::skin-tone-4:  */ "/assets/e3c24f7153adedc726396647dbe5fdb4.svg": "https://upload.wikimedia.org/wikipedia/commons/1/12/Emoji_u1f596_1f3fe.svg",
+  /* :raised_hand_with_part_between_middle_and_ring_fingers::skin-tone-5:  */ "/assets/d52f627e931d2dbcf8e1683480f617f7.svg": "https://upload.wikimedia.org/wikipedia/commons/7/7e/Emoji_u1f596_1f3ff.svg",
   /* :raised_hand:                                                         */ "/assets/fc89a10f50e8b0046eb7d640f5992aa5.svg": "https://upload.wikimedia.org/wikipedia/commons/f/f4/Emoji_u270b.svg",
   /* :raised_hand::skin-tone-1:                                            */ "/assets/2c1e58ff3167260d8358db11bafc12f4.svg": "https://upload.wikimedia.org/wikipedia/commons/f/f4/Emoji_u270b_1f3fb.svg",
   /* :raised_hands:                                                        */ "/assets/b0e797f8bd2559fe2da945a8010c63fe.svg": "https://upload.wikimedia.org/wikipedia/commons/0/02/Emoji_u1f64c.svg",
