--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -424,6 +424,10 @@ $emoji-people: (
   /* :upside_down:                                                         */ "/assets/96b458e549758981dba74c32137c0784.svg": "https://upload.wikimedia.org/wikipedia/commons/e/ef/Emoji_u1f643.svg",
   /* :v:                                                                   */ "/assets/140579c129c16668c3b91718fe747a75.svg": "https://upload.wikimedia.org/wikipedia/commons/c/ca/Emoji_u270c.svg",
   /* :v::skin-tone-1:                                                      */ "/assets/3af544e777c48391f0e381b3e478f35c.svg": "https://upload.wikimedia.org/wikipedia/commons/1/19/Emoji_u270c_1f3fb.svg",
+  /* :v::skin-tone-2:                                                      */ "/assets/a23a62e021b7ab292657281cfbbd83c0.svg": "https://upload.wikimedia.org/wikipedia/commons/8/8b/Emoji_u270c_1f3fc.svg",
+  /* :v::skin-tone-3:                                                      */ "/assets/e371b992ce8df0adb095de856c940cb3.svg": "https://upload.wikimedia.org/wikipedia/commons/5/58/Emoji_u270c_1f3fd.svg",
+  /* :v::skin-tone-4:                                                      */ "/assets/faf9d3371787923d6685ae943b8ce528.svg": "https://upload.wikimedia.org/wikipedia/commons/d/d6/Emoji_u270c_1f3fe.svg",
+  /* :v::skin-tone-5:                                                      */ "/assets/725e23b70c95fc4ece9d95d5927a1708.svg": "https://upload.wikimedia.org/wikipedia/commons/e/e3/Emoji_u270c_1f3ff.svg",
   /* :vulcan:                                                              */ "/assets/cf154cec5ac15640f8e980ce6026178b.svg": "https://upload.wikimedia.org/wikipedia/commons/f/f8/Emoji_u1f596.svg",
   /* :walking:                                                             */ "/assets/a3ca232394a8e24c2110860e52fba60f.svg": "https://upload.wikimedia.org/wikipedia/commons/9/96/Emoji_u1f6b6.svg",
   /* :walking::skin-tone-1:                                                */ "/assets/258d18d5481be6f8bc56cfecad5c347b.svg": "https://upload.wikimedia.org/wikipedia/commons/3/3f/Emoji_u1f6b6_1f3fb.svg",
