emojiNotoBlobs - :ok_hand:

--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -293,6 +293,10 @@ $emoji-people: (
   /* :nose::skin-tone-1:                                                   */ "/assets/95504d9ee568b1fb4e405cf6d547a76b.svg": "https://upload.wikimedia.org/wikipedia/commons/3/33/Emoji_u1f443_1f3fb.svg",
   /* :ok_hand:                                                             */ "/assets/b6f700d4bc253abdb5ad576917b756d8.svg": "https://upload.wikimedia.org/wikipedia/commons/e/ea/Emoji_u1f44c.svg",
   /* :ok_hand::skin-tone-1:                                                */ "/assets/43ef93dbc79067a88977eae6c9b20df5.svg": "https://upload.wikimedia.org/wikipedia/commons/0/0d/Emoji_u1f44c_1f3fb.svg",
+  /* :ok_hand::skin-tone-2:                                                */ "/assets/4738f493074ab28831244b26665fec4b.svg": "https://upload.wikimedia.org/wikipedia/commons/a/a8/Emoji_u1f44c_1f3fc.svg",
+  /* :ok_hand::skin-tone-3:                                                */ "/assets/cd1b618e8dbddf6db059cb3ff5f7c7a3.svg": "https://upload.wikimedia.org/wikipedia/commons/8/8c/Emoji_u1f44c_1f3fd.svg",
+  /* :ok_hand::skin-tone-4:                                                */ "/assets/798f951628a840b0fc6cc37c1c956f60.svg": "https://upload.wikimedia.org/wikipedia/commons/d/dc/Emoji_u1f44c_1f3fe.svg",
+  /* :ok_hand::skin-tone-5:                                                */ "/assets/e8e78b30eba6a84d1f22347e54cefc8b.svg": "https://upload.wikimedia.org/wikipedia/commons/0/07/Emoji_u1f44c_1f3ff.svg",
   /* :ok_woman:                                                            */ "/assets/237b70ca297af61150849c365804c779.svg": "https://upload.wikimedia.org/wikipedia/commons/e/e9/Emoji_u1f646.svg",
   /* :ok_woman::skin-tone-1:                                               */ "/assets/4d4cd504c9f1f4e7f67ca27673b9ba8c.svg": "https://upload.wikimedia.org/wikipedia/commons/e/ea/Emoji_u1f646_1f3fb.svg",
   /* :older_man:                                                           */ "/assets/49c3a3fcb6fce77858b1d839207d4485.svg": "https://upload.wikimedia.org/wikipedia/commons/c/c2/Emoji_u1f474.svg",
