--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -350,6 +350,10 @@ $emoji-people: (
   /* :raised_hand_with_part_between_middle_and_ring_fingers::skin-tone-5:  */ "/assets/d52f627e931d2dbcf8e1683480f617f7.svg": "https://upload.wikimedia.org/wikipedia/commons/7/7e/Emoji_u1f596_1f3ff.svg",
   /* :raised_hand:                                                         */ "/assets/fc89a10f50e8b0046eb7d640f5992aa5.svg": "https://upload.wikimedia.org/wikipedia/commons/f/f4/Emoji_u270b.svg",
   /* :raised_hand::skin-tone-1:                                            */ "/assets/2c1e58ff3167260d8358db11bafc12f4.svg": "https://upload.wikimedia.org/wikipedia/commons/f/f4/Emoji_u270b_1f3fb.svg",
+  /* :raised_hand::skin-tone-2:                                            */ "/assets/f34a6d53142e27a0e4f55462c1d03e0b.svg": "https://upload.wikimedia.org/wikipedia/commons/f/f8/Emoji_u270b_1f3fc.svg",
+  /* :raised_hand::skin-tone-3:                                            */ "/assets/2b1140ac656840832012240154dfecd7.svg": "https://upload.wikimedia.org/wikipedia/commons/c/c5/Emoji_u270b_1f3fd.svg",
+  /* :raised_hand::skin-tone-4:                                            */ "/assets/56eb5526f35e1fc72d3172b354a3b24b.svg": "https://upload.wikimedia.org/wikipedia/commons/a/ae/Emoji_u270b_1f3fe.svg",
+  /* :raised_hand::skin-tone-5:                                            */ "/assets/c7cab760932ff75da214067c8cb1c683.svg": "https://upload.wikimedia.org/wikipedia/commons/b/b6/Emoji_u270b_1f3ff.svg",
   /* :raised_hands:                                                        */ "/assets/b0e797f8bd2559fe2da945a8010c63fe.svg": "https://upload.wikimedia.org/wikipedia/commons/0/02/Emoji_u1f64c.svg",
   /* :raised_hands::skin-tone-1:                                           */ "/assets/be1d43b9455fd7ab71cc5469d7cc9b0f.svg": "https://upload.wikimedia.org/wikipedia/commons/e/e1/Emoji_u1f64c_1f3fb.svg",
   /* :raised_hands::skin-tone-2:                                           */ "/assets/3bc78c9fa93a432b8962d922d7704b07.svg": "https://upload.wikimedia.org/wikipedia/commons/b/bf/Emoji_u1f64c_1f3fc.svg",
