--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -454,6 +454,10 @@ $emoji-people: (
   /* :worried:                                                             */ "/assets/468d61fd9fd55d3f5d905005d2180daa.svg": "https://upload.wikimedia.org/wikipedia/commons/a/a6/Emoji_u1f61f.svg",
   /* :writing_hand:                                                        */ "/assets/8367785ae4d4334f1f3371e239059ca1.svg": "https://upload.wikimedia.org/wikipedia/commons/f/f6/Emoji_u270d.svg",
   /* :writing_hand::skin-tone-1:                                           */ "/assets/b7fa5e789a491ce5f6b3e108b6da2209.svg": "https://upload.wikimedia.org/wikipedia/commons/6/63/Emoji_u270d_1f3fb.svg",
+  /* :writing_hand::skin-tone-2:                                           */ "/assets/22daeec1bc75d9d7038a37f0ed415b1b.svg": "https://upload.wikimedia.org/wikipedia/commons/7/7d/Emoji_u270d_1f3fc.svg",
+  /* :writing_hand::skin-tone-3:                                           */ "/assets/6eb722dc7e84c87c1954fd5f9cf67bd6.svg": "https://upload.wikimedia.org/wikipedia/commons/5/50/Emoji_u270d_1f3fd.svg",
+  /* :writing_hand::skin-tone-4:                                           */ "/assets/dfbb66ea2e930cf2361d46ed5cd527f6.svg": "https://upload.wikimedia.org/wikipedia/commons/f/f9/Emoji_u270d_1f3fe.svg",
+  /* :writing_hand::skin-tone-5:                                           */ "/assets/9ad537f4c34485f64cd1b6b210050016.svg": "https://upload.wikimedia.org/wikipedia/commons/1/13/Emoji_u270d_1f3ff.svg",
   /* :yum:                                                                 */ "/assets/d51bbfccef4b12d5441ca23da921c604.svg": "https://upload.wikimedia.org/wikipedia/commons/b/b5/Emoji_u1f60b.svg",
   /* :zipper_mouth:                                                        */ "/assets/da16c90202a239aff1212e3a8f57bc3e.svg": "https://upload.wikimedia.org/wikipedia/commons/c/c1/Emoji_u1f910.svg",
   /* :zzz:                                                                 */ "/assets/ebd55fc1b90bc34d1bfb36b466b19d54.svg": "https://upload.wikimedia.org/wikipedia/commons/d/d0/Emoji_u1f4a4.svg",
