--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -304,6 +304,10 @@ $emoji-people: (
   /* :older_woman:                                                         */ "/assets/e74caa2bcdbe35371940210cbba77a43.svg": "https://upload.wikimedia.org/wikipedia/commons/d/d7/Emoji_u1f475.svg",
   /* :open_hands:                                                          */ "/assets/0b8a25b6bf050e0cdc61f322e2c518d7.svg": "https://upload.wikimedia.org/wikipedia/commons/5/54/Emoji_u1f450.svg",
   /* :open_hands::skin-tone-1:                                             */ "/assets/bbf0d1a7dad246cfe352d29b52d20f85.svg": "https://upload.wikimedia.org/wikipedia/commons/3/3d/Emoji_u1f450_1f3fb.svg",
+  /* :open_hands::skin-tone-2:                                             */ "/assets/4b6595f25769e4b6002c88d44010f989.svg": "https://upload.wikimedia.org/wikipedia/commons/c/c7/Emoji_u1f450_1f3fc.svg",
+  /* :open_hands::skin-tone-3:                                             */ "/assets/c6778940da985f2494d5978b594dd6bb.svg": "https://upload.wikimedia.org/wikipedia/commons/6/64/Emoji_u1f450_1f3fd.svg",
+  /* :open_hands::skin-tone-4:                                             */ "/assets/424558b2effb0ff0e83387bf9c32ee1c.svg": "https://upload.wikimedia.org/wikipedia/commons/e/e5/Emoji_u1f450_1f3fe.svg",
+  /* :open_hands::skin-tone-5:                                             */ "/assets/293f098c910d602da21e8d8be5e7e835.svg": "https://upload.wikimedia.org/wikipedia/commons/6/63/Emoji_u1f450_1f3ff.svg",
   /* :open_mouth:                                                          */ "/assets/0dc84c65dd1003af7a7f9c29e5be0da0.svg": "https://upload.wikimedia.org/wikipedia/commons/e/e2/Emoji_u1f62e.svg",
   /* :pensive:                                                             */ "/assets/f1f76882104c8724124954b6edfed6d4.svg": "https://upload.wikimedia.org/wikipedia/commons/a/a2/Emoji_u1f614.svg",
   /* :persevere:                                                           */ "/assets/2fe6cd31e65e7a614dce24755303878b.svg": "https://upload.wikimedia.org/wikipedia/commons/a/a7/Emoji_u1f623.svg",
