--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -332,6 +332,10 @@ $emoji-people: (
   /* :pouting_cat:                                                         */ "/assets/b9466f87d129b12061fe2de01ce8067e.svg": "https://upload.wikimedia.org/wikipedia/commons/f/f4/Emoji_u1f63e.svg",
   /* :pray:                                                                */ "/assets/5b4053c17d4c674d7d379a97460df444.svg": "https://upload.wikimedia.org/wikipedia/commons/4/4c/Emoji_u1f64f.svg",
   /* :pray::skin-tone-1:                                                   */ "/assets/059775e45a6109bcfe8c1bc3cf38b669.svg": "https://upload.wikimedia.org/wikipedia/commons/9/90/Emoji_u1f64f_1f3fb.svg",
+  /* :pray::skin-tone-2:                                                   */ "/assets/ab990be4d2b2256720c3a7649de658db.svg": "https://upload.wikimedia.org/wikipedia/commons/d/d7/Emoji_u1f64f_1f3fc.svg",
+  /* :pray::skin-tone-3:                                                   */ "/assets/caa00654980534f4a44ee299b381906e.svg": "https://upload.wikimedia.org/wikipedia/commons/9/9f/Emoji_u1f64f_1f3fd.svg",
+  /* :pray::skin-tone-4:                                                   */ "/assets/a31480bf491cc4fa49fc5f3bd9ec187a.svg": "https://upload.wikimedia.org/wikipedia/commons/3/31/Emoji_u1f64f_1f3fe.svg",
+  /* :pray::skin-tone-5:                                                   */ "/assets/8b41380a04ee16790e7bd93580783f99.svg": "https://upload.wikimedia.org/wikipedia/commons/5/58/Emoji_u1f64f_1f3ff.svg",
   /* :pregnant_woman:                                                      */ "/assets/c69556bbed1f340dbdc84299267738a6.svg": "https://upload.wikimedia.org/wikipedia/commons/e/eb/Emoji_u1f930.svg",
   /* :prince:                                                              */ "/assets/1492eba594b9880b0b8038a5646f7bff.svg": "https://upload.wikimedia.org/wikipedia/commons/0/05/Emoji_u1f934.svg",
   /* :prince::skin-tone-1:                                                 */ "/assets/8c24e60ab57e69fde61f65e763f12ef1.svg": "https://upload.wikimedia.org/wikipedia/commons/5/54/Emoji_u1f934_1f3fb.svg",
