--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -327,6 +327,10 @@ $emoji-people: (
   /* :point_up_2::skin-tone-1:                                             */ "/assets/d9d916014bf5e7a29b3f0a525b274d9a.svg": "https://upload.wikimedia.org/wikipedia/commons/f/fd/Emoji_u1f446_1f3fb.svg",
   /* :point_up:                                                            */ "/assets/b5cb3b03c8c473539a5d17fdd01b5d03.svg": "https://upload.wikimedia.org/wikipedia/commons/6/61/Emoji_u261d.svg",
   /* :point_up::skin-tone-1:                                               */ "/assets/77951800ff6ebcd3dd026cbf4ab6855b.svg": "https://upload.wikimedia.org/wikipedia/commons/1/11/Emoji_u261d_1f3fb.svg",
+  /* :point_up::skin-tone-2:                                               */ "/assets/30edf2c30a5033aac762593307be959f.svg": "https://upload.wikimedia.org/wikipedia/commons/d/db/Emoji_u261d_1f3fc.svg",
+  /* :point_up::skin-tone-3:                                               */ "/assets/fdb16a7427a15e15a138bc4af700d47e.svg": "https://upload.wikimedia.org/wikipedia/commons/7/74/Emoji_u261d_1f3fd.svg",
+  /* :point_up::skin-tone-4:                                               */ "/assets/54423dc01031b892c921072a38995e1f.svg": "https://upload.wikimedia.org/wikipedia/commons/3/3f/Emoji_u261d_1f3fe.svg",
+  /* :point_up::skin-tone-5:                                               */ "/assets/172469b6c295496106cf16d5ae762ad3.svg": "https://upload.wikimedia.org/wikipedia/commons/6/60/Emoji_u261d_1f3ff.svg",
   /* :poop:                                                                */ "/assets/ced0c08553c2ade6cbeee29a40f4ac8c.svg": "https://upload.wikimedia.org/wikipedia/commons/6/6a/Emoji_u1f4a9.svg",
   /* :pouch:                                                               */ "/assets/436c4e245d6573100d79a0f3d57fa0a3.svg": "https://upload.wikimedia.org/wikipedia/commons/7/77/Emoji_u1f45d.svg",
   /* :pouting_cat:                                                         */ "/assets/b9466f87d129b12061fe2de01ce8067e.svg": "https://upload.wikimedia.org/wikipedia/commons/f/f4/Emoji_u1f63e.svg",
