--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -325,6 +325,10 @@ $emoji-people: (
   /* :point_right::skin-tone-1:                                            */ "/assets/701f29d542d971338781ff3636e14c1d.svg": "https://upload.wikimedia.org/wikipedia/commons/3/3c/Emoji_u1f449_1f3fb.svg",
   /* :point_up_2:                                                          */ "/assets/c3b50e0a2399559c80c84bc1766ca177.svg": "https://upload.wikimedia.org/wikipedia/commons/0/03/Emoji_u1f446.svg",
   /* :point_up_2::skin-tone-1:                                             */ "/assets/d9d916014bf5e7a29b3f0a525b274d9a.svg": "https://upload.wikimedia.org/wikipedia/commons/f/fd/Emoji_u1f446_1f3fb.svg",
+  /* :point_up_2::skin-tone-2:                                             */ "/assets/2f3b4c7470135939fb64e70047cff69a.svg": "https://upload.wikimedia.org/wikipedia/commons/9/9a/Emoji_u1f446_1f3fc.svg",
+  /* :point_up_2::skin-tone-3:                                             */ "/assets/0c773ee0e2eba3c653b376bdaddd833f.svg": "https://upload.wikimedia.org/wikipedia/commons/d/d7/Emoji_u1f446_1f3fd.svg",
+  /* :point_up_2::skin-tone-4:                                             */ "/assets/d7862f15a6f0a0e067621e17c5dd9844.svg": "https://upload.wikimedia.org/wikipedia/commons/4/44/Emoji_u1f446_1f3fe.svg",
+  /* :point_up_2::skin-tone-5:                                             */ "/assets/1d6a81def7effcd452f427fd83c2a53d.svg": "https://upload.wikimedia.org/wikipedia/commons/9/9e/Emoji_u1f446_1f3ff.svg",
   /* :point_up:                                                            */ "/assets/b5cb3b03c8c473539a5d17fdd01b5d03.svg": "https://upload.wikimedia.org/wikipedia/commons/6/61/Emoji_u261d.svg",
   /* :point_up::skin-tone-1:                                               */ "/assets/77951800ff6ebcd3dd026cbf4ab6855b.svg": "https://upload.wikimedia.org/wikipedia/commons/1/11/Emoji_u261d_1f3fb.svg",
   /* :point_up::skin-tone-2:                                               */ "/assets/30edf2c30a5033aac762593307be959f.svg": "https://upload.wikimedia.org/wikipedia/commons/d/db/Emoji_u261d_1f3fc.svg",
