--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -291,6 +291,10 @@ $emoji-people: (
   /* :no_mouth:                                                            */ "/assets/0c447d7b6e88284741bb9a70f213a17b.svg": "https://upload.wikimedia.org/wikipedia/commons/1/14/Emoji_u1f636.svg",
   /* :nose:                                                                */ "/assets/dbdf73851d673c57783bb673cd92c2ac.svg": "https://upload.wikimedia.org/wikipedia/commons/7/78/Emoji_u1f443.svg",
   /* :nose::skin-tone-1:                                                   */ "/assets/95504d9ee568b1fb4e405cf6d547a76b.svg": "https://upload.wikimedia.org/wikipedia/commons/3/33/Emoji_u1f443_1f3fb.svg",
+  /* :nose::skin-tone-2:                                                   */ "/assets/ab86c7db6eaa9450989f1c1c6fc233a2.svg": "https://upload.wikimedia.org/wikipedia/commons/0/04/Emoji_u1f443_1f3fc.svg",
+  /* :nose::skin-tone-3:                                                   */ "/assets/9455ecf858b24aa42d1f0fd842df7cb7.svg": "https://upload.wikimedia.org/wikipedia/commons/4/4e/Emoji_u1f443_1f3fd.svg",
+  /* :nose::skin-tone-4:                                                   */ "/assets/2e48b8609d115da852221f0e9ba373d3.svg": "https://upload.wikimedia.org/wikipedia/commons/e/ec/Emoji_u1f443_1f3fe.svg",
+  /* :nose::skin-tone-5:                                                   */ "/assets/742834817a7efb6bc8647e4b326b8dc0.svg": "https://upload.wikimedia.org/wikipedia/commons/c/c8/Emoji_u1f443_1f3ff.svg",
   /* :ok_hand:                                                             */ "/assets/b6f700d4bc253abdb5ad576917b756d8.svg": "https://upload.wikimedia.org/wikipedia/commons/e/ea/Emoji_u1f44c.svg",
   /* :ok_hand::skin-tone-1:                                                */ "/assets/43ef93dbc79067a88977eae6c9b20df5.svg": "https://upload.wikimedia.org/wikipedia/commons/0/0d/Emoji_u1f44c_1f3fb.svg",
   /* :ok_hand::skin-tone-2:                                                */ "/assets/4738f493074ab28831244b26665fec4b.svg": "https://upload.wikimedia.org/wikipedia/commons/a/a8/Emoji_u1f44c_1f3fc.svg",
