--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -303,6 +303,10 @@ $emoji-people: (
   /* :ok_hand::skin-tone-5:                                                */ "/assets/e8e78b30eba6a84d1f22347e54cefc8b.svg": "https://upload.wikimedia.org/wikipedia/commons/0/07/Emoji_u1f44c_1f3ff.svg",
   /* :ok_woman:                                                            */ "/assets/237b70ca297af61150849c365804c779.svg": "https://upload.wikimedia.org/wikipedia/commons/e/e9/Emoji_u1f646.svg",
   /* :ok_woman::skin-tone-1:                                               */ "/assets/4d4cd504c9f1f4e7f67ca27673b9ba8c.svg": "https://upload.wikimedia.org/wikipedia/commons/e/ea/Emoji_u1f646_1f3fb.svg",
+  /* :ok_woman::skin-tone-2:                                               */ "/assets/51fd389d0759e83dc79999573bef69ef.svg": "https://upload.wikimedia.org/wikipedia/commons/5/5c/Emoji_u1f646_1f3fc.svg",
+  /* :ok_woman::skin-tone-3:                                               */ "/assets/3358df5f68ca912b26cd6ef7f41c187d.svg": "https://upload.wikimedia.org/wikipedia/commons/f/f0/Emoji_u1f646_1f3fd.svg",
+  /* :ok_woman::skin-tone-4:                                               */ "/assets/d7c25dc8ccdb0a1f6f8c5789dd950536.svg": "https://upload.wikimedia.org/wikipedia/commons/6/69/Emoji_u1f646_1f3fe.svg",
+  /* :ok_woman::skin-tone-5:                                               */ "/assets/df56157adca6e141e7bd6d85603c9966.svg": "https://upload.wikimedia.org/wikipedia/commons/6/67/Emoji_u1f646_1f3ff.svg",
   /* :older_man:                                                           */ "/assets/49c3a3fcb6fce77858b1d839207d4485.svg": "https://upload.wikimedia.org/wikipedia/commons/c/c2/Emoji_u1f474.svg",
   /* :older_man::skin-tone-1:                                              */ "/assets/bdbdbd69184f74469910613b420f6766.svg": "https://upload.wikimedia.org/wikipedia/commons/1/1a/Emoji_u1f474_1f3fb.svg",
   /* :older_woman:                                                         */ "/assets/e74caa2bcdbe35371940210cbba77a43.svg": "https://upload.wikimedia.org/wikipedia/commons/d/d7/Emoji_u1f475.svg",
