--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -309,6 +309,10 @@ $emoji-people: (
   /* :ok_woman::skin-tone-5:                                               */ "/assets/df56157adca6e141e7bd6d85603c9966.svg": "https://upload.wikimedia.org/wikipedia/commons/6/67/Emoji_u1f646_1f3ff.svg",
   /* :older_man:                                                           */ "/assets/49c3a3fcb6fce77858b1d839207d4485.svg": "https://upload.wikimedia.org/wikipedia/commons/c/c2/Emoji_u1f474.svg",
   /* :older_man::skin-tone-1:                                              */ "/assets/bdbdbd69184f74469910613b420f6766.svg": "https://upload.wikimedia.org/wikipedia/commons/1/1a/Emoji_u1f474_1f3fb.svg",
+  /* :older_man::skin-tone-2:                                              */ "/assets/88c78d65da0448f26557eeb6c9c0b939.svg": "https://upload.wikimedia.org/wikipedia/commons/8/82/Emoji_u1f474_1f3fc.svg",
+  /* :older_man::skin-tone-3:                                              */ "/assets/cdedf4a62db79b73def2403ceed6248b.svg": "https://upload.wikimedia.org/wikipedia/commons/2/25/Emoji_u1f474_1f3fd.svg",
+  /* :older_man::skin-tone-4:                                              */ "/assets/b2a5766ab73dfbe6f39c9130b2f86615.svg": "https://upload.wikimedia.org/wikipedia/commons/e/e4/Emoji_u1f474_1f3fe.svg",
+  /* :older_man::skin-tone-5:                                              */ "/assets/482d469d7ce32f46661b38c127c9aae8.svg": "https://upload.wikimedia.org/wikipedia/commons/b/b7/Emoji_u1f474_1f3ff.svg",
   /* :older_woman:                                                         */ "/assets/e74caa2bcdbe35371940210cbba77a43.svg": "https://upload.wikimedia.org/wikipedia/commons/d/d7/Emoji_u1f475.svg",
   /* :open_hands:                                                          */ "/assets/0b8a25b6bf050e0cdc61f322e2c518d7.svg": "https://upload.wikimedia.org/wikipedia/commons/5/54/Emoji_u1f450.svg",
   /* :open_hands::skin-tone-1:                                             */ "/assets/bbf0d1a7dad246cfe352d29b52d20f85.svg": "https://upload.wikimedia.org/wikipedia/commons/3/3d/Emoji_u1f450_1f3fb.svg",
