emojiNotoBlobs - :person_frowning:

--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -325,6 +325,10 @@ $emoji-people: (
   /* :persevere:                                                           */ "/assets/2fe6cd31e65e7a614dce24755303878b.svg": "https://upload.wikimedia.org/wikipedia/commons/a/a7/Emoji_u1f623.svg",
   /* :person_frowning:                                                     */ "/assets/b3644635b7fa4c14b8c687279132d6d3.svg": "https://upload.wikimedia.org/wikipedia/commons/e/e5/Emoji_u1f64d.svg",
   /* :person_frowning::skin-tone-1:                                        */ "/assets/9b0d9f8334fdd41f6d3e0d00ca875126.svg": "https://upload.wikimedia.org/wikipedia/commons/5/5e/Emoji_u1f64d_1f3fb.svg",
+  /* :person_frowning::skin-tone-2:                                        */ "/assets/afd3c5afd4943807ce9d74d916f0f039.svg": "https://upload.wikimedia.org/wikipedia/commons/3/38/Emoji_u1f64d_1f3fc.svg",
+  /* :person_frowning::skin-tone-3:                                        */ "/assets/9daf2f4c47d57eb9a2ff8a501a59b6bc.svg": "https://upload.wikimedia.org/wikipedia/commons/9/93/Emoji_u1f64d_1f3fd.svg",
+  /* :person_frowning::skin-tone-4:                                        */ "/assets/1facd2b513632e621c0f44508ef813cb.svg": "https://upload.wikimedia.org/wikipedia/commons/e/eb/Emoji_u1f64d_1f3fe.svg",
+  /* :person_frowning::skin-tone-5:                                        */ "/assets/f0c55d5b975d44901445ce41b902adbc.svg": "https://upload.wikimedia.org/wikipedia/commons/4/4f/Emoji_u1f64d_1f3ff.svg",
   /* :person_with_blond_hair:                                              */ "/assets/9c3350157759e726b74dec0e9ca66236.svg": "https://upload.wikimedia.org/wikipedia/commons/4/48/Emoji_u1f471.svg",
   /* :person_with_blond_hair::skin-tone-1:                                 */ "/assets/c90307f07b761f5cb95ef6e2bc7b7bc2.svg": "https://upload.wikimedia.org/wikipedia/commons/d/df/Emoji_u1f471_1f3fb.svg",
   /* :person_with_pouting_face:                                            */ "/assets/e85ff09eff5deffb7c5518b5f709f32f.svg": "https://upload.wikimedia.org/wikipedia/commons/5/53/Emoji_u1f64e.svg",
