--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -331,6 +331,10 @@ $emoji-people: (
   /* :person_frowning::skin-tone-5:                                        */ "/assets/f0c55d5b975d44901445ce41b902adbc.svg": "https://upload.wikimedia.org/wikipedia/commons/4/4f/Emoji_u1f64d_1f3ff.svg",
   /* :person_with_blond_hair:                                              */ "/assets/9c3350157759e726b74dec0e9ca66236.svg": "https://upload.wikimedia.org/wikipedia/commons/4/48/Emoji_u1f471.svg",
   /* :person_with_blond_hair::skin-tone-1:                                 */ "/assets/c90307f07b761f5cb95ef6e2bc7b7bc2.svg": "https://upload.wikimedia.org/wikipedia/commons/d/df/Emoji_u1f471_1f3fb.svg",
+  /* :person_with_blond_hair::skin-tone-2:                                 */ "/assets/05a0dab96845747a9dad9950e1516049.svg": "https://upload.wikimedia.org/wikipedia/commons/d/d8/Emoji_u1f471_1f3fc.svg",
+  /* :person_with_blond_hair::skin-tone-3:                                 */ "/assets/0eb1a1f84016e92d11b5746e1281cef0.svg": "https://upload.wikimedia.org/wikipedia/commons/d/df/Emoji_u1f471_1f3fd.svg",
+  /* :person_with_blond_hair::skin-tone-4:                                 */ "/assets/02e78b361bc5d3c94792d80798bee9b4.svg": "https://upload.wikimedia.org/wikipedia/commons/a/a0/Emoji_u1f471_1f3fe.svg",
+  /* :person_with_blond_hair::skin-tone-5:                                 */ "/assets/7d9b683701298739d8333b78c6e221b3.svg": "https://upload.wikimedia.org/wikipedia/commons/b/b7/Emoji_u1f471_1f3ff.svg",
   /* :person_with_pouting_face:                                            */ "/assets/e85ff09eff5deffb7c5518b5f709f32f.svg": "https://upload.wikimedia.org/wikipedia/commons/5/53/Emoji_u1f64e.svg",
   /* :person_with_pouting_face::skin-tone-1:                               */ "/assets/727c7353ce593812cdef9d13f390a4bc.svg": "https://upload.wikimedia.org/wikipedia/commons/6/6d/Emoji_u1f64e_1f3fb.svg",
   /* :point_down:                                                          */ "/assets/e60e16b4d0e0473e84e9253b6c31c9fe.svg": "https://upload.wikimedia.org/wikipedia/commons/0/03/Emoji_u1f446.svg",
