emojiNotoBlobs - :person_with_pouting_face:

--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -337,6 +337,10 @@ $emoji-people: (
   /* :person_with_blond_hair::skin-tone-5:                                 */ "/assets/7d9b683701298739d8333b78c6e221b3.svg": "https://upload.wikimedia.org/wikipedia/commons/b/b7/Emoji_u1f471_1f3ff.svg",
   /* :person_with_pouting_face:                                            */ "/assets/e85ff09eff5deffb7c5518b5f709f32f.svg": "https://upload.wikimedia.org/wikipedia/commons/5/53/Emoji_u1f64e.svg",
   /* :person_with_pouting_face::skin-tone-1:                               */ "/assets/727c7353ce593812cdef9d13f390a4bc.svg": "https://upload.wikimedia.org/wikipedia/commons/6/6d/Emoji_u1f64e_1f3fb.svg",
+  /* :person_with_pouting_face::skin-tone-2:                               */ "/assets/62dae85f2df69691e56f3e0e35dc1f20.svg": "https://upload.wikimedia.org/wikipedia/commons/c/c6/Emoji_u1f64e_1f3fc.svg",
+  /* :person_with_pouting_face::skin-tone-3:                               */ "/assets/b8eade04b9fca7b6bdb54ebd35ceda23.svg": "https://upload.wikimedia.org/wikipedia/commons/7/77/Emoji_u1f64e_1f3fd.svg",
+  /* :person_with_pouting_face::skin-tone-4:                               */ "/assets/268313978529f610f8d107cb7b9ca3ff.svg": "https://upload.wikimedia.org/wikipedia/commons/d/d5/Emoji_u1f64e_1f3fe.svg",
+  /* :person_with_pouting_face::skin-tone-5:                               */ "/assets/250a5574b811f77b4f0398f3ac99c09a.svg": "https://upload.wikimedia.org/wikipedia/commons/0/05/Emoji_u1f64e_1f3ff.svg",
   /* :point_down:                                                          */ "/assets/e60e16b4d0e0473e84e9253b6c31c9fe.svg": "https://upload.wikimedia.org/wikipedia/commons/0/03/Emoji_u1f446.svg",
   /* :point_down::skin-tone-1:                                             */ "/assets/f9bafdf843585abcf8bec6aa1d831903.svg": "https://upload.wikimedia.org/wikipedia/commons/1/12/Emoji_u1f447_1f3fb.svg",
   /* :point_left:                                                          */ "/assets/079d5f5bb53850bc4f42a142467c3e49.svg": "https://upload.wikimedia.org/wikipedia/commons/1/17/Emoji_u1f448.svg",
