--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -341,8 +341,12 @@ $emoji-people: (
   /* :person_with_pouting_face::skin-tone-3:                               */ "/assets/b8eade04b9fca7b6bdb54ebd35ceda23.svg": "https://upload.wikimedia.org/wikipedia/commons/7/77/Emoji_u1f64e_1f3fd.svg",
   /* :person_with_pouting_face::skin-tone-4:                               */ "/assets/268313978529f610f8d107cb7b9ca3ff.svg": "https://upload.wikimedia.org/wikipedia/commons/d/d5/Emoji_u1f64e_1f3fe.svg",
   /* :person_with_pouting_face::skin-tone-5:                               */ "/assets/250a5574b811f77b4f0398f3ac99c09a.svg": "https://upload.wikimedia.org/wikipedia/commons/0/05/Emoji_u1f64e_1f3ff.svg",
-  /* :point_down:                                                          */ "/assets/e60e16b4d0e0473e84e9253b6c31c9fe.svg": "https://upload.wikimedia.org/wikipedia/commons/0/03/Emoji_u1f446.svg",
+  /* :point_down:                                                          */ "/assets/e60e16b4d0e0473e84e9253b6c31c9fe.svg": "https://upload.wikimedia.org/wikipedia/commons/5/57/Emoji_u1f447.svg",
   /* :point_down::skin-tone-1:                                             */ "/assets/f9bafdf843585abcf8bec6aa1d831903.svg": "https://upload.wikimedia.org/wikipedia/commons/1/12/Emoji_u1f447_1f3fb.svg",
+  /* :point_down::skin-tone-2:                                             */ "/assets/8d0adb29f66fa7124440e4a3350f02d9.svg": "https://upload.wikimedia.org/wikipedia/commons/7/7c/Emoji_u1f447_1f3fc.svg",
+  /* :point_down::skin-tone-3:                                             */ "/assets/432418d378a71e3c91cafacd7addbdb5.svg": "https://upload.wikimedia.org/wikipedia/commons/2/27/Emoji_u1f447_1f3fd.svg",
+  /* :point_down::skin-tone-4:                                             */ "/assets/45d0611f6c143f30c3e4ecbdd4fa18de.svg": "https://upload.wikimedia.org/wikipedia/commons/9/90/Emoji_u1f447_1f3fe.svg",
+  /* :point_down::skin-tone-5:                                             */ "/assets/96091367fb4ecabf745bb360d54af3ae.svg": "https://upload.wikimedia.org/wikipedia/commons/e/e2/Emoji_u1f447_1f3ff.svg",
   /* :point_left:                                                          */ "/assets/079d5f5bb53850bc4f42a142467c3e49.svg": "https://upload.wikimedia.org/wikipedia/commons/1/17/Emoji_u1f448.svg",
   /* :point_left::skin-tone-1:                                             */ "/assets/a39988f482465dbfc556e51fdd453423.svg": "https://upload.wikimedia.org/wikipedia/commons/2/25/Emoji_u1f448_1f3fb.svg",
   /* :point_right:                                                         */ "/assets/6fc965fbef1b4aeb6167f652cd0544fc.svg": "https://upload.wikimedia.org/wikipedia/commons/a/ac/Emoji_u1f449.svg",
