emojiNotoBlobs - :point_left:

--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -349,6 +349,10 @@ $emoji-people: (
   /* :point_down::skin-tone-5:                                             */ "/assets/96091367fb4ecabf745bb360d54af3ae.svg": "https://upload.wikimedia.org/wikipedia/commons/e/e2/Emoji_u1f447_1f3ff.svg",
   /* :point_left:                                                          */ "/assets/079d5f5bb53850bc4f42a142467c3e49.svg": "https://upload.wikimedia.org/wikipedia/commons/1/17/Emoji_u1f448.svg",
   /* :point_left::skin-tone-1:                                             */ "/assets/a39988f482465dbfc556e51fdd453423.svg": "https://upload.wikimedia.org/wikipedia/commons/2/25/Emoji_u1f448_1f3fb.svg",
+  /* :point_left::skin-tone-2:                                             */ "/assets/6f7698c03f9e9ae9c39a6bd56993c70f.svg": "https://upload.wikimedia.org/wikipedia/commons/4/44/Emoji_u1f448_1f3fc.svg",
+  /* :point_left::skin-tone-3:                                             */ "/assets/5c2cc273a92041b91790559d1c8b43e0.svg": "https://upload.wikimedia.org/wikipedia/commons/b/b3/Emoji_u1f448_1f3fd.svg",
+  /* :point_left::skin-tone-4:                                             */ "/assets/fbb29bdd5dab3ae39abe229cb3e763f0.svg": "https://upload.wikimedia.org/wikipedia/commons/0/0d/Emoji_u1f448_1f3fe.svg",
+  /* :point_left::skin-tone-5:                                             */ "/assets/7abcbfdc7fccf059d790d5800d4547be.svg": "https://upload.wikimedia.org/wikipedia/commons/6/6f/Emoji_u1f448_1f3ff.svg",
   /* :point_right:                                                         */ "/assets/6fc965fbef1b4aeb6167f652cd0544fc.svg": "https://upload.wikimedia.org/wikipedia/commons/a/ac/Emoji_u1f449.svg",
   /* :point_right::skin-tone-1:                                            */ "/assets/701f29d542d971338781ff3636e14c1d.svg": "https://upload.wikimedia.org/wikipedia/commons/3/3c/Emoji_u1f449_1f3fb.svg",
   /* :point_up_2:                                                          */ "/assets/c3b50e0a2399559c80c84bc1766ca177.svg": "https://upload.wikimedia.org/wikipedia/commons/0/03/Emoji_u1f446.svg",
