emojiNotoBlobs - :point_right:

--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -355,6 +355,10 @@ $emoji-people: (
   /* :point_left::skin-tone-5:                                             */ "/assets/7abcbfdc7fccf059d790d5800d4547be.svg": "https://upload.wikimedia.org/wikipedia/commons/6/6f/Emoji_u1f448_1f3ff.svg",
   /* :point_right:                                                         */ "/assets/6fc965fbef1b4aeb6167f652cd0544fc.svg": "https://upload.wikimedia.org/wikipedia/commons/a/ac/Emoji_u1f449.svg",
   /* :point_right::skin-tone-1:                                            */ "/assets/701f29d542d971338781ff3636e14c1d.svg": "https://upload.wikimedia.org/wikipedia/commons/3/3c/Emoji_u1f449_1f3fb.svg",
+  /* :point_right::skin-tone-2:                                            */ "/assets/924af7dbf7b21591877845884a0b4145.svg": "https://upload.wikimedia.org/wikipedia/commons/8/84/Emoji_u1f449_1f3fc.svg",
+  /* :point_right::skin-tone-3:                                            */ "/assets/698f64baf79e432e2e58c3516314fc28.svg": "https://upload.wikimedia.org/wikipedia/commons/1/15/Emoji_u1f449_1f3fd.svg",
+  /* :point_right::skin-tone-4:                                            */ "/assets/592b40127f1f7aae194df42ee7a31707.svg": "https://upload.wikimedia.org/wikipedia/commons/f/f1/Emoji_u1f449_1f3fe.svg",
+  /* :point_right::skin-tone-5:                                            */ "/assets/ac0237dbf2e4b33bfbe26f24d5ea0c10.svg": "https://upload.wikimedia.org/wikipedia/commons/1/1d/Emoji_u1f449_1f3ff.svg",
   /* :point_up_2:                                                          */ "/assets/c3b50e0a2399559c80c84bc1766ca177.svg": "https://upload.wikimedia.org/wikipedia/commons/0/03/Emoji_u1f446.svg",
   /* :point_up_2::skin-tone-1:                                             */ "/assets/d9d916014bf5e7a29b3f0a525b274d9a.svg": "https://upload.wikimedia.org/wikipedia/commons/f/fd/Emoji_u1f446_1f3fb.svg",
   /* :point_up_2::skin-tone-2:                                             */ "/assets/2f3b4c7470135939fb64e70047cff69a.svg": "https://upload.wikimedia.org/wikipedia/commons/9/9a/Emoji_u1f446_1f3fc.svg",
