--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -383,6 +383,10 @@ $emoji-people: (
   /* :pregnant_woman:                                                      */ "/assets/c69556bbed1f340dbdc84299267738a6.svg": "https://upload.wikimedia.org/wikipedia/commons/e/eb/Emoji_u1f930.svg",
   /* :prince:                                                              */ "/assets/1492eba594b9880b0b8038a5646f7bff.svg": "https://upload.wikimedia.org/wikipedia/commons/0/05/Emoji_u1f934.svg",
   /* :prince::skin-tone-1:                                                 */ "/assets/8c24e60ab57e69fde61f65e763f12ef1.svg": "https://upload.wikimedia.org/wikipedia/commons/5/54/Emoji_u1f934_1f3fb.svg",
+  /* :prince::skin-tone-2:                                                 */ "/assets/c3fa7929f40cb7beb6505c2d62d7ec79.svg": "https://upload.wikimedia.org/wikipedia/commons/f/f6/Emoji_u1f934_1f3fc.svg",
+  /* :prince::skin-tone-3:                                                 */ "/assets/a40d99db731147e3ffbfcf6021d045ef.svg": "https://upload.wikimedia.org/wikipedia/commons/3/34/Emoji_u1f934_1f3fd.svg",
+  /* :prince::skin-tone-4:                                                 */ "/assets/353e18a6bff03b7e2afa72a20294f6f8.svg": "https://upload.wikimedia.org/wikipedia/commons/2/2e/Emoji_u1f934_1f3fe.svg",
+  /* :prince::skin-tone-5:                                                 */ "/assets/702b751f9b82cd325bd739276a23611f.svg": "https://upload.wikimedia.org/wikipedia/commons/8/88/Emoji_u1f934_1f3ff.svg",
   /* :princess:                                                            */ "/assets/bd64b69bc23bf78a5cc04ea738691317.svg": "https://upload.wikimedia.org/wikipedia/commons/8/8e/Emoji_u1f478.svg",
   /* :princess::skin-tone-1:                                               */ "/assets/b7bab19670566c278bb5324560223c20.svg": "https://upload.wikimedia.org/wikipedia/commons/5/5f/Emoji_u1f478_1f3fb.svg",
   /* :punch:                                                               */ "/assets/fadb5208b3cfe613768e0ea7a8d1156c.svg": "https://upload.wikimedia.org/wikipedia/commons/1/1c/Emoji_u1f44a.svg",
