--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -389,6 +389,10 @@ $emoji-people: (
   /* :prince::skin-tone-5:                                                 */ "/assets/702b751f9b82cd325bd739276a23611f.svg": "https://upload.wikimedia.org/wikipedia/commons/8/88/Emoji_u1f934_1f3ff.svg",
   /* :princess:                                                            */ "/assets/bd64b69bc23bf78a5cc04ea738691317.svg": "https://upload.wikimedia.org/wikipedia/commons/8/8e/Emoji_u1f478.svg",
   /* :princess::skin-tone-1:                                               */ "/assets/b7bab19670566c278bb5324560223c20.svg": "https://upload.wikimedia.org/wikipedia/commons/5/5f/Emoji_u1f478_1f3fb.svg",
+  /* :princess::skin-tone-2:                                               */ "/assets/928c56a3d77bf8c97cea48c3ffb96a19.svg": "https://upload.wikimedia.org/wikipedia/commons/0/0e/Emoji_u1f478_1f3fc.svg",
+  /* :princess::skin-tone-3:                                               */ "/assets/bf3d8334c87c0ab58fef142e93ab68b4.svg": "https://upload.wikimedia.org/wikipedia/commons/2/2b/Emoji_u1f478_1f3fd.svg",
+  /* :princess::skin-tone-4:                                               */ "/assets/ae3c40fe8e1e9f3b9a7a4b24f5bad2fc.svg": "https://upload.wikimedia.org/wikipedia/commons/8/84/Emoji_u1f478_1f3fe.svg",
+  /* :princess::skin-tone-5:                                               */ "/assets/80f54fb115eb84f4f233f2c6e7b8207b.svg": "https://upload.wikimedia.org/wikipedia/commons/f/fe/Emoji_u1f478_1f3ff.svg",
   /* :punch:                                                               */ "/assets/fadb5208b3cfe613768e0ea7a8d1156c.svg": "https://upload.wikimedia.org/wikipedia/commons/1/1c/Emoji_u1f44a.svg",
   /* :punch::skin-tone-1:                                                  */ "/assets/5b47cfea434c291683dc4401a0e44a96.svg": "https://upload.wikimedia.org/wikipedia/commons/0/00/Emoji_u1f44a_1f3fb.svg",
   /* :punch::skin-tone-2:                                                  */ "/assets/495ad2f944153c5b35803bdad20d3ce9.svg": "https://upload.wikimedia.org/wikipedia/commons/6/66/Emoji_u1f44a_1f3fc.svg",
