emojiNotoBlobs - :raised_hand_with_fingers_splayed:

--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -403,6 +403,10 @@ $emoji-people: (
   /* :rage:                                                                */ "/assets/10d135bf11670b6db1db682a512da004.svg": "https://upload.wikimedia.org/wikipedia/commons/7/7f/Emoji_u1f621.svg",
   /* :raised_back_of_hand:                                                 */ "/assets/0c0a3500a658fb9df2fe8359cec22571.svg": "https://upload.wikimedia.org/wikipedia/commons/e/e2/Emoji_u1f91a.svg",
   /* :raised_hand_with_fingers_splayed::skin-tone-1:                       */ "/assets/d119791b00db523bb2d2334aa01f4a92.svg": "https://upload.wikimedia.org/wikipedia/commons/6/6f/Emoji_u1f590_1f3fb.svg",
+  /* :raised_hand_with_fingers_splayed::skin-tone-2:                       */ "/assets/06689e1e352cf5da2ec9bac4eb214629.svg": "https://upload.wikimedia.org/wikipedia/commons/6/6f/Emoji_u1f590_1f3fc.svg",
+  /* :raised_hand_with_fingers_splayed::skin-tone-3:                       */ "/assets/74bf2dd8e3475e071726b5ae03af706c.svg": "https://upload.wikimedia.org/wikipedia/commons/e/ea/Emoji_u1f590_1f3fd.svg",
+  /* :raised_hand_with_fingers_splayed::skin-tone-4:                       */ "/assets/caad10e810a5adf9d22341624d984535.svg": "https://upload.wikimedia.org/wikipedia/commons/7/7c/Emoji_u1f590_1f3fe.svg",
+  /* :raised_hand_with_fingers_splayed::skin-tone-5:                       */ "/assets/4d50f3c5e6175279fdbc3b8a9d4e921b.svg": "https://upload.wikimedia.org/wikipedia/commons/1/1d/Emoji_u1f590_1f3ff.svg",
   /* :raised_hand_with_part_between_middle_and_ring_fingers::skin-tone-1:  */ "/assets/58cc362724b317f91994079a1887e956.svg": "https://upload.wikimedia.org/wikipedia/commons/2/21/Emoji_u1f596_1f3fb.svg",
   /* :raised_hand_with_part_between_middle_and_ring_fingers::skin-tone-2:  */ "/assets/c229dd04e596f7aa51e8e7c02ad048c4.svg": "https://upload.wikimedia.org/wikipedia/commons/8/8c/Emoji_u1f596_1f3fc.svg",
   /* :raised_hand_with_part_between_middle_and_ring_fingers::skin-tone-3:  */ "/assets/e5b26f209a6f89f8cb3e045b45f9a4f7.svg": "https://upload.wikimedia.org/wikipedia/commons/d/dc/Emoji_u1f596_1f3fd.svg",
