emojiNotoBlobs - :raising_hand:

--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -426,6 +426,10 @@ $emoji-people: (
   /* :raised_hands::skin-tone-5:                                           */ "/assets/286401dd97b522b8976817de15001f29.svg": "https://upload.wikimedia.org/wikipedia/commons/e/e3/Emoji_u1f64c_1f3ff.svg",
   /* :raising_hand:                                                        */ "/assets/d9b465085bb2bdd5063063d25c63081b.svg": "https://upload.wikimedia.org/wikipedia/commons/3/38/Emoji_u1f64b.svg",
   /* :raising_hand::skin-tone-1:                                           */ "/assets/47334adcee703b33a9dc6660809ba33d.svg": "https://upload.wikimedia.org/wikipedia/commons/b/b5/Emoji_u1f64b_1f3fb.svg",
+  /* :raising_hand::skin-tone-2:                                           */ "/assets/2ef3ffaba265982139d520d7492177c7.svg": "https://upload.wikimedia.org/wikipedia/commons/4/45/Emoji_u1f64b_1f3fc.svg",
+  /* :raising_hand::skin-tone-3:                                           */ "/assets/e446bb93704840bca7e1148b5f46aae0.svg": "https://upload.wikimedia.org/wikipedia/commons/e/e7/Emoji_u1f64b_1f3fd.svg",
+  /* :raising_hand::skin-tone-4:                                           */ "/assets/875b941b371946c8fae95d21afcfd615.svg": "https://upload.wikimedia.org/wikipedia/commons/0/09/Emoji_u1f64b_1f3fe.svg",
+  /* :raising_hand::skin-tone-5:                                           */ "/assets/1171ebc545fcd43691cedb9e75269107.svg": "https://upload.wikimedia.org/wikipedia/commons/4/45/Emoji_u1f64b_1f3ff.svg",
   /* :relaxed:                                                             */ "/assets/81be662a9bb9f2cfa8b7c8ac2f9dfcd6.svg": "https://upload.wikimedia.org/wikipedia/commons/e/ef/Emoji_u263a.svg",
   /* :relieved:                                                            */ "/assets/e9b114282c887f219e297d6cc7249363.svg": "https://upload.wikimedia.org/wikipedia/commons/4/43/Emoji_u1f60c.svg",
   /* :reversed_hand_with_middle_finger_extended::skin-tone-1:              */ "/assets/33db1aeefb2bf5b2d4994e97a714c270.svg": "https://upload.wikimedia.org/wikipedia/commons/8/8d/Emoji_u1f595_1f3fb.svg",
