emojiNotoBlobs - :right_fist:

--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -435,6 +435,10 @@ $emoji-people: (
   /* :reversed_hand_with_middle_finger_extended::skin-tone-1:              */ "/assets/33db1aeefb2bf5b2d4994e97a714c270.svg": "https://upload.wikimedia.org/wikipedia/commons/8/8d/Emoji_u1f595_1f3fb.svg",
   /* :right_facing_fist:                                                   */ "/assets/2125697f90e69344140e556a0f60b57b.svg": "https://upload.wikimedia.org/wikipedia/commons/7/70/Emoji_u1f91c.svg",
   /* :right_fist::skin-tone-1:                                             */ "/assets/c241725e71a9be3fa21b738deae1a4fd.svg": "https://upload.wikimedia.org/wikipedia/commons/b/b6/Emoji_u1f91c_1f3fb.svg",
+  /* :right_fist::skin-tone-2:                                             */ "/assets/979ff3475ca4af06ac8195059c58310b.svg": "https://upload.wikimedia.org/wikipedia/commons/5/57/Emoji_u1f91c_1f3fc.svg",
+  /* :right_fist::skin-tone-3:                                             */ "/assets/ec0fb42a32022b141dc59d0f56052c94.svg": "https://upload.wikimedia.org/wikipedia/commons/2/2f/Emoji_u1f91c_1f3fd.svg",
+  /* :right_fist::skin-tone-4:                                             */ "/assets/f6bf85ea717664e621e5c096554ea8e5.svg": "https://upload.wikimedia.org/wikipedia/commons/2/27/Emoji_u1f91c_1f3fe.svg",
+  /* :right_fist::skin-tone-5:                                             */ "/assets/a0203c51a8c65e6faec55b694b50d388.svg": "https://upload.wikimedia.org/wikipedia/commons/8/8d/Emoji_u1f91c_1f3ff.svg",
   /* :ring:                                                                */ "/assets/1af980baa9905025f174dace30ac031b.svg": "https://upload.wikimedia.org/wikipedia/commons/4/40/Emoji_u1f48d.svg",
   /* :robot:                                                               */ "/assets/37721a3154785c9557e97172b60c6ce7.svg": "https://upload.wikimedia.org/wikipedia/commons/0/0b/Emoji_u1f916.svg",
   /* :rofl:                                                                */ "/assets/a8fc44fdb07e26cf994055376a719540.svg": "https://upload.wikimedia.org/wikipedia/commons/b/bc/Emoji_u1f923.svg",
