emojiNotoBlobs - :reversed_hand_with_middle_finger_extended:

--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -433,6 +433,10 @@ $emoji-people: (
   /* :relaxed:                                                             */ "/assets/81be662a9bb9f2cfa8b7c8ac2f9dfcd6.svg": "https://upload.wikimedia.org/wikipedia/commons/e/ef/Emoji_u263a.svg",
   /* :relieved:                                                            */ "/assets/e9b114282c887f219e297d6cc7249363.svg": "https://upload.wikimedia.org/wikipedia/commons/4/43/Emoji_u1f60c.svg",
   /* :reversed_hand_with_middle_finger_extended::skin-tone-1:              */ "/assets/33db1aeefb2bf5b2d4994e97a714c270.svg": "https://upload.wikimedia.org/wikipedia/commons/8/8d/Emoji_u1f595_1f3fb.svg",
+  /* :reversed_hand_with_middle_finger_extended::skin-tone-2:              */ "/assets/197be9e1e044a6f085b2a370c2038b17.svg": "https://upload.wikimedia.org/wikipedia/commons/c/cb/Emoji_u1f595_1f3fc.svg",
+  /* :reversed_hand_with_middle_finger_extended::skin-tone-3:              */ "/assets/351f5ddc74814a38f8d6dc60c2bd955b.svg": "https://upload.wikimedia.org/wikipedia/commons/1/1b/Emoji_u1f595_1f3fd.svg",
+  /* :reversed_hand_with_middle_finger_extended::skin-tone-4:              */ "/assets/79794433628289324374fa0b5317f577.svg": "https://upload.wikimedia.org/wikipedia/commons/5/59/Emoji_u1f595_1f3fe.svg",
+  /* :reversed_hand_with_middle_finger_extended::skin-tone-5:              */ "/assets/1721c6a286b19ff264040edee011b1e6.svg": "https://upload.wikimedia.org/wikipedia/commons/4/4e/Emoji_u1f595_1f3ff.svg",
   /* :right_facing_fist:                                                   */ "/assets/2125697f90e69344140e556a0f60b57b.svg": "https://upload.wikimedia.org/wikipedia/commons/7/70/Emoji_u1f91c.svg",
   /* :right_fist::skin-tone-1:                                             */ "/assets/c241725e71a9be3fa21b738deae1a4fd.svg": "https://upload.wikimedia.org/wikipedia/commons/b/b6/Emoji_u1f91c_1f3fb.svg",
   /* :right_fist::skin-tone-2:                                             */ "/assets/979ff3475ca4af06ac8195059c58310b.svg": "https://upload.wikimedia.org/wikipedia/commons/5/57/Emoji_u1f91c_1f3fc.svg",
