--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -449,6 +449,10 @@ $emoji-people: (
   /* :rolling_eyes:                                                        */ "/assets/df108c82f499b630411d1fc6594f3717.svg": "https://upload.wikimedia.org/wikipedia/commons/f/f4/Emoji_u1f644.svg",
   /* :runner:                                                              */ "/assets/684da156eee6f555554432a375b67205.svg": "https://upload.wikimedia.org/wikipedia/commons/f/f8/Emoji_u1f3c3.svg",
   /* :runner::skin-tone-1:                                                 */ "/assets/b99cf66cfc7b9c857e4f68c342da939a.svg": "https://upload.wikimedia.org/wikipedia/commons/a/a2/Emoji_u1f3c3_1f3fb_200d_2642.svg",
+  /* :runner::skin-tone-2:                                                 */ "/assets/4e99d686ae146ccd955abfc58c901fba.svg": "https://upload.wikimedia.org/wikipedia/commons/f/f5/Emoji_u1f3c3_1f3fc.svg",
+  /* :runner::skin-tone-3:                                                 */ "/assets/b13594a6e898d6428fd01ebbb5da1d4f.svg": "https://upload.wikimedia.org/wikipedia/commons/4/44/Emoji_u1f3c3_1f3fd.svg",
+  /* :runner::skin-tone-4:                                                 */ "/assets/33c839360447988d8836a0b8bc6b1082.svg": "https://upload.wikimedia.org/wikipedia/commons/8/8b/Emoji_u1f3c3_1f3fe.svg",
+  /* :runner::skin-tone-5:                                                 */ "/assets/0b76e985ecf94d0b8b682ccb98e63785.svg": "https://upload.wikimedia.org/wikipedia/commons/f/f2/Emoji_u1f3c3_1f3ff.svg",
   /* :sandal:                                                              */ "/assets/bcd5640706c77fef963998baa5d1d168.svg": "https://upload.wikimedia.org/wikipedia/commons/7/7d/Emoji_u1f461.svg",
   /* :santa:                                                               */ "/assets/37017a416c2a6ab030f0de3db9f6e73e.svg": "https://upload.wikimedia.org/wikipedia/commons/1/13/Emoji_u1f385.svg",
   /* :santa::skin-tone-1:                                                  */ "/assets/8567d5c31070ff2d904aa34c0498d728.svg": "https://upload.wikimedia.org/wikipedia/commons/3/38/Emoji_u1f385_1f3fb.svg",
